--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "fastapi[standard]>=0.128.0",
+    "pydantic-settings>=2.12.0",
+    "sqlmodel>=0.0.31",
+    "psycopg2-binary>=2.9.0",
+    "commitizen>=4.11.0",
+]
