feat: implemented login and register routes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,4 +10,9 @@ dependencies = [
     "sqlmodel>=0.0.31",
     "psycopg2-binary>=2.9.0",
     "commitizen>=4.11.0",
+    "alembic>=1.17.2",
+    "bcrypt>=4.3.0",
+    "passlib>=1.7.4",
+    "python-jose[cryptography]>=3.3.0",
+    "python-multipart>=0.0.6",
 ]
