--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,4 +15,7 @@ dependencies = [
     "passlib>=1.7.4",
     "python-jose[cryptography]>=3.3.0",
     "python-multipart>=0.0.6",
+    "google-auth>=2.23.0",
+    "google-auth-oauthlib>=1.1.0",
+    "requests>=2.31.0",
 ]
