feat : added image upload support from cloudinary

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,5 @@ dependencies = [
     "google-auth>=2.23.0",
     "google-auth-oauthlib>=1.1.0",
     "requests>=2.31.0",
+    "cloudinary>=1.44.1",
 ]
