--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,17 +1,13 @@
 version: 1.0
-runtime: python3
+runtime: python311
 build:
   commands:
     build:
-      - echo "Installing dependencies..."
-      - pip install --upgrade pip
-      - pip install -r requirements.txt
+      - pip3 install --upgrade pip
+      - pip3 install -r requirements.txt
 run:
   runtime-version: 3.11
   command: uvicorn main:app --host 0.0.0.0 --port 8080
   network:
     port: 8080
     env: PORT
-  env:
-    - name: PORT
-      value: "8080"
