--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -7,7 +7,7 @@ build:
       - pip3 install -r requirements.txt
 run:
   runtime-version: 3.11
-  command: uvicorn main:app --host 0.0.0.0 --port 8080
+  command: python3 -m uvicorn main:app --host 0.0.0.0 --port 8080
   network:
     port: 8080
     env: PORT
