--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -7,6 +7,8 @@ build:
       - pip3 install -r requirements.txt
 run:
   runtime-version: 3.11
+  pre-run:
+    - pip3 install -r requirements.txt
   command: python3 -m uvicorn main:app --host 0.0.0.0 --port 8080
   network:
     port: 8080
