--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -28,16 +28,16 @@ run:
       value: "app-organised-gym"
   secrets:
     - name: DB_CONNECTION_URL
-      value-from: "arn:aws:secretsmanager:REGION:ACCOUNT_ID:secret:organised-gym/prod:DB_CONNECTION_URL::"
+      value-from: "arn:aws:secretsmanager:ap-south-1:324512687832:secret:og-db-secrets-NIaDV3:DB_CONNECTION_URL::"
     - name: SECRET_KEY
-      value-from: "arn:aws:secretsmanager:REGION:ACCOUNT_ID:secret:organised-gym/prod:SECRET_KEY::"
+      value-from: "arn:aws:secretsmanager:ap-south-1:324512687832:secret:og-db-secrets-NIaDV3:SECRET_KEY::"
     - name: CLOUDINARY_CLOUD_NAME
-      value-from: "arn:aws:secretsmanager:REGION:ACCOUNT_ID:secret:organised-gym/prod:CLOUDINARY_CLOUD_NAME::"
+      value-from: "arn:aws:secretsmanager:ap-south-1:324512687832:secret:og-db-secrets-NIaDV3:CLOUDINARY_CLOUD_NAME::"
     - name: CLOUDINARY_CLOUD_API_KEY
-      value-from: "arn:aws:secretsmanager:REGION:ACCOUNT_ID:secret:organised-gym/prod:CLOUDINARY_CLOUD_API_KEY::"
+      value-from: "arn:aws:secretsmanager:ap-south-1:324512687832:secret:og-db-secrets-NIaDV3:CLOUDINARY_CLOUD_API_KEY::"
     - name: CLOUDINARY_CLOUD_API_SECRET
-      value-from: "arn:aws:secretsmanager:REGION:ACCOUNT_ID:secret:organised-gym/prod:CLOUDINARY_CLOUD_API_SECRET::"
+      value-from: "arn:aws:secretsmanager:ap-south-1:324512687832:secret:og-db-secrets-NIaDV3:CLOUDINARY_CLOUD_API_SECRET::"
     - name: CLOUDINARY_URL
-      value-from: "arn:aws:secretsmanager:REGION:ACCOUNT_ID:secret:organised-gym/prod:CLOUDINARY_URL::"
+      value-from: "arn:aws:secretsmanager:ap-south-1:324512687832:secret:og-db-secrets-NIaDV3:CLOUDINARY_URL::"
     - name: FIREBASE_SERVICE_ACCOUNT_JSON_BASE64
-      value-from: "arn:aws:secretsmanager:REGION:ACCOUNT_ID:secret:organised-gym/prod:FIREBASE_SERVICE_ACCOUNT_JSON_BASE64::"
+      value-from: "arn:aws:secretsmanager:ap-south-1:324512687832:secret:og-db-secrets-NIaDV3:FIREBASE_SERVICE_ACCOUNT_JSON_BASE64::"
