--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,43 +1,37 @@
 version: 1.0
-runtime: python311
+
+runtime: docker
 
 build:
-  commands:
-    build:
-      - pip3 install --upgrade pip
-      - pip3 install -r requirements.txt
+  dockerfile: Dockerfile
+  context: .
 
 run:
-  runtime-version: 3.11
-  pre-run:
-    - pip3 install -r requirements.txt
-  command: python3 -m uvicorn main:app --host 0.0.0.0 --port 8080
+  command: uvicorn main:app --host 0.0.0.0 --port 8080
   network:
     port: 8080
-    env: PORT
+
   env:
-    - name: APP_NAME
-      value: "Organised Gym"
-    - name: ALGORITHM
-      value: "HS256"
-    - name: ACCESS_TOKEN_EXPIRE_MINUTES
-      value: "43200"
-    - name: REFRESH_TOKEN_EXPIRE_DAYS
-      value: "7"
-    - name: FIREBASE_PROJECT_ID
-      value: "app-organised-gym"
+    # Application
+    APP_NAME: "Organised Gym"
+    ALGORITHM: "HS256"
+    ACCESS_TOKEN_EXPIRE_MINUTES: "43200"
+    REFRESH_TOKEN_EXPIRE_DAYS: "7"
+
+    # AWS / RDS (IAM AUTH)
+    AWS_REGION: "ap-south-1"
+    DB_HOST: "og-gym-db.cz40qy680dya.ap-south-1.rds.amazonaws.com"
+    DB_PORT: "5432"
+    DB_NAME: "og_gym"
+    DB_USER: "apprunner_user"
+
+    # Firebase
+    FIREBASE_PROJECT_ID: "app-organised-gym"
+
   secrets:
-    - name: DB_CONNECTION_URL
-      value-from: "arn:aws:secretsmanager:ap-south-1:324512687832:secret:og-db-secrets-NIaDV3:DB_CONNECTION_URL::"
-    - name: SECRET_KEY
-      value-from: "arn:aws:secretsmanager:ap-south-1:324512687832:secret:og-db-secrets-NIaDV3:SECRET_KEY::"
-    - name: CLOUDINARY_CLOUD_NAME
-      value-from: "arn:aws:secretsmanager:ap-south-1:324512687832:secret:og-db-secrets-NIaDV3:CLOUDINARY_CLOUD_NAME::"
-    - name: CLOUDINARY_CLOUD_API_KEY
-      value-from: "arn:aws:secretsmanager:ap-south-1:324512687832:secret:og-db-secrets-NIaDV3:CLOUDINARY_CLOUD_API_KEY::"
-    - name: CLOUDINARY_CLOUD_API_SECRET
-      value-from: "arn:aws:secretsmanager:ap-south-1:324512687832:secret:og-db-secrets-NIaDV3:CLOUDINARY_CLOUD_API_SECRET::"
-    - name: CLOUDINARY_URL
-      value-from: "arn:aws:secretsmanager:ap-south-1:324512687832:secret:og-db-secrets-NIaDV3:CLOUDINARY_URL::"
-    - name: FIREBASE_SERVICE_ACCOUNT_JSON_BASE64
-      value-from: "arn:aws:secretsmanager:ap-south-1:324512687832:secret:og-db-secrets-NIaDV3:FIREBASE_SERVICE_ACCOUNT_JSON_BASE64::"
+    SECRET_KEY: "arn:aws:secretsmanager:ap-south-1:324512687832:secret:og-db-secrets-NIaDV3:SECRET_KEY::"
+    CLOUDINARY_CLOUD_NAME: "arn:aws:secretsmanager:ap-south-1:324512687832:secret:og-db-secrets-NIaDV3:CLOUDINARY_CLOUD_NAME::"
+    CLOUDINARY_CLOUD_API_KEY: "arn:aws:secretsmanager:ap-south-1:324512687832:secret:og-db-secrets-NIaDV3:CLOUDINARY_CLOUD_API_KEY::"
+    CLOUDINARY_CLOUD_API_SECRET: "arn:aws:secretsmanager:ap-south-1:324512687832:secret:og-db-secrets-NIaDV3:CLOUDINARY_CLOUD_API_SECRET::"
+    CLOUDINARY_URL: "arn:aws:secretsmanager:ap-south-1:324512687832:secret:og-db-secrets-NIaDV3:CLOUDINARY_URL::"
+    FIREBASE_SERVICE_ACCOUNT_JSON_BASE64: "arn:aws:secretsmanager:ap-south-1:324512687832:secret:og-db-secrets-NIaDV3:FIREBASE_SERVICE_ACCOUNT_JSON_BASE64::"
