--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,4 +20,6 @@ dependencies = [
     "requests>=2.31.0",
     "cloudinary>=1.44.1",
     "resend>=2.21.0",
+    "boto>=2.49.0",
+    "boto3>=1.42.36",
 ]
