--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,33 +1,40 @@
+version: "3.9"
+
 services:
   db:
     image: postgres:16-alpine
+    container_name: og_postgres
     environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: secret
-      POSTGRES_DB: organised_gym
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: ">Zz6WGoOiBi2RFg9Cud3>7!y:jjh"
+      POSTGRES_DB: og_gym
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U admin"]
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
 
   web:
     build: .
+    container_name: og_api
     ports:
-      - "8000:80"
-    environment:
-      - DB_USER=admin
-      - DB_PASSWORD=secret
-      - DB_NAME=organised_gym
-      - DB_HOST=db
-      - DB_PORT=5432
+      - "8000:8000"
+    env_file:
+      - .env
     depends_on:
       db:
         condition: service_healthy
+    extra_hosts:
+      - "localhost:host-gateway"
+    command: >
+      uvicorn app.main:app
+      --host 0.0.0.0
+      --port 8000
+      --reload
 
 volumes:
   postgres_data:
